@@ -481,6 +481,15 @@ class EditorsManager( QTabWidget ):
         if not wasDiscard and not enforced:
             self.__updateFilePosition( index )
 
+        # Check if it is necessary to add a file to the recent history
+        if self.widget( index ).getType() in \
+            [ MainWindowTabWidgetBase.PlainTextEditor,
+              MainWindowTabWidgetBase.PictureViewer ]:
+            # Yes, it needs to be saved if it was saved at least once
+            fileName = self.widget( index ).getFileName()
+            if os.path.isabs( fileName ):
+                GlobalData().project.addRecentFile( fileName )
+
         self.__skipHistoryUpdate = True
         self.removeTab( index )
 
